acceptance/tests/fixtures/cases/openshift/basic/backend.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: backend
  namespace: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: backend
      containers:
      - name: backend
        image: nicholasjackson/fake-service:v0.26.0
        ports:
        - containerPort: 8080
        env:
        - name: LISTEN_ADDR
          value: "0.0.0.0:8080"
        - name: NAME
          value: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
---
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceDefaults
metadata:
  name: backend
  namespace: backend
spec:
  protocol: http
