acceptance/tests/fixtures/cases/openshift/basic/frontend.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: frontend
  namespace: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: frontend
      containers:
      - name: frontend
        image: nicholasjackson/fake-service:v0.26.0
        ports:
        - containerPort: 8080
        env:
        - name: LISTEN_ADDR
          value: "0.0.0.0:8080"
        - name: NAME
          value: frontend
        - name: UPSTREAM_URIS
          value: 'http://backend.backend:8080'

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 8080
---
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceDefaults
metadata:
  name: frontend
  namespace: frontend
spec:
  protocol: http
